log
Fri 24 Mar 2023 05:22:40 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
281e1ae
Fri 24 Mar 2023 05:27:09 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:18: error: ‘head’ undeclared (first use in this function)
   43 |   list->current =head->data;
      |                  ^~~~
list.c:43:18: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘nextList’:
list.c:47:20: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   47 |   if(list->current = NULL || list->current->next == NULL)
      |                    ^
list.c:47:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   47 |   if(list->current = NULL || list->current->next == NULL)
      |      ^~~~
list.c:50:3: error: ‘listcurrent’ undeclared (first use in this function)
   50 |   listcurrent-> = list->current->next;
      |   ^~~~~~~~~~~
list.c:50:17: error: expected identifier before ‘=’ token
   50 |   listcurrent-> = list->current->next;
      |                 ^
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b2dc0a3
Fri 24 Mar 2023 05:28:04 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:18: error: ‘head’ undeclared (first use in this function)
   45 |   list->current =head->data;
      |                  ^~~~
list.c:45:18: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘nextList’:
list.c:50:20: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |   if(list->current = NULL || list->current->next == NULL)
      |                    ^
list.c:50:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   50 |   if(list->current = NULL || list->current->next == NULL)
      |      ^~~~
list.c:53:3: error: ‘listcurrent’ undeclared (first use in this function)
   53 |   listcurrent-> = list->current->next;
      |   ^~~~~~~~~~~
list.c:53:17: error: expected identifier before ‘=’ token
   53 |   listcurrent-> = list->current->next;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
5712da6
Fri 24 Mar 2023 05:28:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:20: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |   if(list->current = NULL || list->current->next == NULL)
      |                    ^
list.c:50:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   50 |   if(list->current = NULL || list->current->next == NULL)
      |      ^~~~
list.c:53:3: error: ‘listcurrent’ undeclared (first use in this function)
   53 |   listcurrent-> = list->current->next;
      |   ^~~~~~~~~~~
list.c:53:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:53:17: error: expected identifier before ‘=’ token
   53 |   listcurrent-> = list->current->next;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
1b2140e
Fri 24 Mar 2023 05:30:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:20: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |   if(list->current = NULL || list->current->next == NULL)
      |                    ^
list.c:50:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   50 |   if(list->current = NULL || list->current->next == NULL)
      |      ^~~~
list.c:53:3: error: ‘listcurrent’ undeclared (first use in this function)
   53 |   listcurrent-> = list->current->next;
      |   ^~~~~~~~~~~
list.c:53:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:53:17: error: expected identifier before ‘=’ token
   53 |   listcurrent-> = list->current->next;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
d3db02a
Fri 24 Mar 2023 05:30:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:3: error: ‘listcurrent’ undeclared (first use in this function)
   53 |   listcurrent-> = list->current->next;
      |   ^~~~~~~~~~~
list.c:53:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:53:17: error: expected identifier before ‘=’ token
   53 |   listcurrent-> = list->current->next;
      |                 ^
Compilation failed
d13c9ea
Fri 24 Mar 2023 05:30:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:3: error: ‘listcurrent’ undeclared (first use in this function)
   53 |   listcurrent->current = list->current->next;
      |   ^~~~~~~~~~~
list.c:53:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e67b6df
Fri 24 Mar 2023 05:31:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
e373075
Fri 24 Mar 2023 05:33:39 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:61:26: error: expected ‘;’ before ‘}’ token
   61 |   return list->tail->data
      |                          ^
      |                          ;
   62 | }
      | ~                         
Compilation failed
2669353
Fri 24 Mar 2023 05:33:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
0e51619
Fri 24 Mar 2023 06:02:39 PM UTC: 
 list.c | 33 +++++++++++++++++++++++++++++++--
 1 file changed, 31 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushBack’:
list.c:91:5: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
   91 |     newNode->next = list->current->next;
      |     ^~~~~~~
      |     Node
list.c:91:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:90:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   90 |   else
      |   ^~~~
list.c:92:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   92 |     newNode->next = list->current;
      |     ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
19b18b9
Fri 24 Mar 2023 06:03:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushBack’:
list.c:88:1: error: unknown type name ‘node’; did you mean ‘Node’?
   88 | node* newNode = createNode(data);
      | ^~~~
      | Node
list.c:88:17: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   88 | node* newNode = createNode(data);
      |                 ^~~~~~~~~~
list.c:91:12: error: request for member ‘next’ in something not a structure or union
   91 |     newNode->next = list->current->next;
      |            ^~
list.c:90:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   90 |   else
      |   ^~~~
list.c:92:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   92 |     newNode->next = list->current;
      |     ^~~~~~~
list.c:92:12: error: request for member ‘next’ in something not a structure or union
   92 |     newNode->next = list->current;
      |            ^~
list.c:95:35: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   95 |         list->current->next->prev = newNode;
      |                                   ^
list.c:96:25: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   96 |     list->current->next = newNode;
      |                         ^
list.c:97:17: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   97 |   list->current = newNode;
      |                 ^
list.c:98:13: error: request for member ‘next’ in something not a structure or union
   98 |   if(newNode->next == NULL)
      |             ^~
list.c:99:15: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   99 |     list->tail=newNode;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
efa30d2
Fri 24 Mar 2023 06:03:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushBack’:
list.c:90:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   90 |   else
      |   ^~~~
list.c:92:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   92 |     newNode->next = list->current;
      |     ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f2c5e52
